# Heap-of-Battle

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.txt  Heap-of-Battle2.sln  LICENSE.txt  Makefile  README.md
config/: CMakeLists.txt
config/hob-converter/: CMakeLists.txt
config/hob-converter/include/: converter.hpp
config/hob-converter/src/: converter.cpp  main.cpp
config/json/: game.json  logger.json  main_menu.json
hob/: CMakeLists.txt  Makefile
hob-engine/: CMakeLists.txt
hob-engine/include/: application.hpp  scene.hpp
hob-engine/include/details/: drawable.hpp  visibility.hpp
hob-engine/include/internal/: application_impl.hpp  loader.hpp  scene_plugin.hpp  shared_library.hpp  test.hpp
hob-engine/src/: application.cpp  application_impl.cpp  drawable.cpp  loader.cpp  scene_plugin.cpp  shared_library.cpp  test.cpp
hob-log/: CMakeLists.txt
hob-log/include/: configuration.hpp  logger.hpp  types.hpp
hob-log/include/details/: internal.hpp  strip.hpp  visibility.hpp
hob-log/include/internal/: deserializer.hpp  deserializer_cbor.hpp  deserializer_json.hpp  message_queue.hpp  serializer.hpp  serializer_cbor.hpp  serializer_json.hpp  sink.hpp  sink_base.hpp  sink_composed.hpp  sink_file.hpp  sink_manager.hpp  sink_terminal.hpp  utility.hpp  worker.hpp
hob-log/src/: deserializer.cpp  deserializer_cbor.cpp  deserializer_json.cpp  logger.cpp  message_queue.cpp  serializer.cpp  serializer_cbor.cpp  serializer_json.cpp  sink.cpp  sink_base.cpp  sink_composed.cpp  sink_file.cpp  sink_manager.cpp  sink_terminal.cpp  utility.cpp  worker.cpp
hob/game/: CMakeLists.txt
hob/game/include/: game.hpp
hob/game/src/: game.cpp  main.cpp
hob/include/Common/: hob_AsyncQueue.hpp  hob_Component.hpp  hob_Cursor.hpp  hob_FramesPerSecond.hpp  hob_IDrawable.hpp  hob_Loop.hpp  hob_Music.hpp  hob_Ping.hpp  hob_Renderer.hpp  hob_Server.hpp  hob_Socket.hpp  hob_Sound.hpp  hob_SoundInitializer.hpp  hob_Texture.hpp  hob_TextureInitializer.hpp  hob_Types.hpp  hob_Window.hpp
hob/include/Game/Common/: hob_Building.hpp  hob_BuildingInitializer.hpp  hob_Chat.hpp  hob_ChatFrame.hpp  hob_Encryptor.hpp  hob_Faction.hpp  hob_Gold.hpp  hob_Icons.hpp  hob_LogManager.hpp  hob_Menu.hpp  hob_Tile.hpp  hob_TileInitializer.hpp  hob_Timer.hpp  hob_Units.hpp
hob/include/Game/Scenario1/: hob_Buildings1.hpp  hob_Grid1.hpp  hob_Map1.hpp  hob_Tiles1.hpp
hob/include/Main/: hob_Game.hpp  hob_Initializer.hpp  hob_Test.hpp  hob_Version.hpp  hob_Window.hpp
hob/include/Menu/: hob_LoadingScreen.hpp  hob_LocalMenu.hpp  hob_MainMenu.hpp  hob_MenuCommon.hpp
hob/src/Common/: Socket.cpp  hob_Component.cpp  hob_Cursor.cpp  hob_Encryptor.cpp  hob_FramesPerSecond.cpp  hob_Loop.cpp  hob_Music.cpp  hob_Ping.cpp  hob_Renderer.cpp  hob_Server.cpp  hob_Socket.cpp  hob_Sound.cpp  hob_Texture.cpp  hob_Window.cpp
hob/src/Game/Common/: hob_Building.cpp  hob_Chat.cpp  hob_ChatFrame.cpp  hob_Encryptor.cpp  hob_Faction.cpp  hob_Gold.cpp  hob_Icons.cpp  hob_LogManager.cpp  hob_Menu.cpp  hob_Tile.cpp  hob_Timer.cpp  hob_Units.cpp
hob/src/Game/Scenario1/: hob_Buildings1.cpp  hob_Grid1.cpp  hob_Map1.cpp  hob_Tiles1.cpp
hob/src/Main/: hob_Game.cpp  hob_Initializer.cpp  hob_Main.cpp  hob_Test.cpp  hob_Window.cpp
hob/src/Menu/: hob_LoadingScreen.cpp  hob_LocalMenu.cpp  hob_MainMenu.cpp
test/: CMakeLists.txt  Makefile
test/automation/: Makefile  test.py
test/automation/tests/: smoke_input.txt  smoke_output.txt
test/common/: plog.conf  run.sh  verify.pl
test/hob-apitester/: CMakeLists.txt
test/hob-apitester/include/: apitester.hpp  exception.hpp  invalid_argument.hpp  out_of_range.hpp
test/hob-apitester/include/details/: argument.hpp  internal.hpp
test/hob-apitester/include/internal/: parser.hpp
test/hob-apitester/src/: apitester.cpp  argument.cpp  invalid_argument.cpp  out_of_range.cpp  parser.cpp
test/hob-log-test/: CMakeLists.txt
test/hob-log-test/src/: test.cpp
test/hob-sandbox/include/: sandbox.hpp
test/hob-sandbox/src/: main.cpp
test/main_menu/: exceptions.txt  required.txt  steps.txt
test/main_menu_exit/: required.txt  steps.txt
test/main_menu_quit/: required.txt  steps.txt
test/sandbox/: CMakeLists.txt
test/sandbox/include/: sandbox.hpp
test/sandbox/src/: main.cpp
unit-tests/: CMakeLists.txt  Makefile
unit-tests/hob/: Makefile
unit-tests/hob-log/: CMakeLists.txt
unit-tests/hob-log/message_queue/: CMakeLists.txt
unit-tests/hob-log/message_queue/src/: message_queue_test.cpp
unit-tests/hob-log/utility/: CMakeLists.txt
unit-tests/hob-log/utility/src/: utility_test.cpp
unit-tests/hob-log/worker/: CMakeLists.txt
unit-tests/hob-log/worker/src/: worker_test.cpp
unit-tests/hob/hob_AsyncQueue/: Makefile
unit-tests/hob/hob_Building/: Makefile
unit-tests/hob/hob_ChatFrame/: Makefile
unit-tests/hob/hob_Component/: Makefile
unit-tests/hob/hob_Cursor/: Makefile
unit-tests/hob/hob_Cursor/src/: hob_Cursor_test.cpp
unit-tests/hob/hob_Encryptor/: Makefile
unit-tests/hob/hob_Faction/: Makefile
unit-tests/hob/hob_FramesPerSecond/: Makefile
unit-tests/hob/hob_Game/: Makefile
unit-tests/hob/hob_Initializer/: Makefile
unit-tests/hob/hob_LoadingScreen/: Makefile
unit-tests/hob/hob_Music/: Makefile
unit-tests/hob/hob_Ping/: Makefile
unit-tests/hob/hob_Sound/: Makefile
unit-tests/hob/hob_Texture/: Makefile
unit-tests/hob/hob_Window/: Makefile
unit-tests/mocks/: SDL_image_mock.hpp  SDL_mixer_mock.hpp  SDL_mock.hpp  SDL_ttf_mock.hpp  hobServer_Server_mock.hpp  hobServer_Version_mock.hpp  hob_Component_mock.hpp  hob_Cursor_mock.hpp  hob_Faction_mock.hpp  hob_LocalMenu_mock.hpp  hob_MainMenu_mock.hpp  hob_Map1_mock.hpp  hob_Music_mock.hpp  hob_Ping_mock.hpp  hob_Socket_mock.hpp  hob_SoundInitializer_mock.hpp  hob_Sound_mock.hpp  hob_TextureInitializer_mock.hpp  hob_Texture_mock.hpp  hob_Window_mock.hpp  obfuscator_mock.hpp  stl_queue_begin.hpp  stl_queue_end.hpp  stl_queue_mock.hpp  stl_string_begin.hpp  stl_string_end.hpp  stl_string_mock.hpp
unit-tests/mocks/std/: queue_begin.hpp  queue_end.hpp  queue_mock.hpp
(+1521 files in other folders)
