#######################################################################################################
# Copyright (C) Heap of Battle 2024
# Author: Gaina Stefan
# Date: 15.12.2024
# Description: This CMake file is used to invoke the CMake files in the subdirectories.
#######################################################################################################

add_subdirectory(game)
