#######################################################################################################
# Copyright (C) Heap of Battle 2024
# Author: Gaina Stefan
# Date: 17.11.2024
# Description: This CMake file is used to invoke the CMake files in the subdirectories.
#######################################################################################################

add_subdirectory(${HOB_APITESTER_DIRECTORY})
add_subdirectory(${HOB_LOG_TEST_DIRECTORY})
add_subdirectory(${HOB_SANDBOX_DIRECTORY})
