#######################################################################################################
# Copyright (C) Heap of Battle 2024
# Author: Gaina Stefan
# Date: 19.11.2024
# Description: This CMake file is used to invoke the CMake files in the subdirectories.
#######################################################################################################

# add_subdirectory(logger)
# add_subdirectory(message_queue)
# add_subdirectory(sink_base)
# add_subdirectory(sink_terminal)
# add_subdirectory(sink)
add_subdirectory(utility)
# add_subdirectory(worker)
